--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<h1 class="text-uppercase  animated wow fadeInLeft">Take Photos Like A Pro.</h1>
 				<p class="text-lowercase  animated wow fadeInLeft">With only your iphone and capture app you can take stunning image like a professional Photographer.</p>
 
-				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<!--<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="iphone_icon"></i>
 					<span>Iphone App</span>
 				</a>
@@ -77,7 +77,7 @@
 				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="android_icon"></i>
 					<span>Android App</span>
-				</a>
+				</a>-->
 			</div>			
 		</div>
 	</section>
