--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 	<section class="hero" id="hero">
 		<div class="container">
 			<div class="caption">
-				<h1 class="text-uppercase  animated wow fadeInLeft">Take Photos Like A Pro.</h1>
-				<p class="text-lowercase  animated wow fadeInLeft">With only your iphone and capture app you can take stunning image like a professional Photographer.</p>
+				<h1 class="text-uppercase  animated wow fadeInLeft">The 1st Greenport in Indonesia.</h1>
+				<p class="text-lowercase  animated wow fadeInLeft">Located in Teluk Lamong, 30 minutes from Surabaya. Closed to airport anda seaport. We proud to call ourselve the 1st international and domestic greenport in Indonesia. </p>
 
 				<!--<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="iphone_icon"></i>
