--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-	<!--  Featured On Section  -->
+	<!--  Featured On Section 
 	<section class="featured_on">
 		<div class="container">
 			<ul class="list-unstyled text-center clearfix">
@@ -107,7 +107,7 @@
 			</ul>
 		</div>
 	</section>
-	<!--  End Featured On Section  -->
+	  End Featured On Section  -->
 
 
 
