--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
 		<div class="container">
 			<div class="caption">
 				<h1 class="text-uppercase  animated wow fadeInLeft">The 1st Greenport in Indonesia.</h1>
-				<p class="text-lowercase  animated wow fadeInLeft">Located in Teluk Lamong, 30 minutes from Surabaya. Closed to airport anda seaport. We proud to call ourselve the 1st international and domestic greenport in Indonesia. </p>
+				<ul class="text-lowercase  animated wow fadeInLeft">
+					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</ul>
+					<li>Closed to airport anda seaport.</li>
+					<li>Modern international and domestic greenport in Indonesia.</li>
+				</ul>
 
 				<!--<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="iphone_icon"></i>
