--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="caption">
 				<h1 class="text-uppercase  animated wow fadeInLeft">The 1st Greenport in Indonesia.</h1>
 				<ul class="text-lowercase  animated wow fadeInLeft">
-					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</ul>
+					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
 					<li>Closed to airport anda seaport.</li>
 					<li>Modern international and domestic greenport in Indonesia.</li>
 				</ul>
