--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 
 			
-			<nav class="pull-left">
+			<nav class="pull-right">
 				<ul class="list-unstyled">
 					<li class="animated wow fadeInLeft" data-wow-delay="0s"><a href="#about">About</a></li>
 					<li class="animated wow fadeInLeft" data-wow-delay=".1s"><a href="#app_features">Features</a></li>
@@ -44,13 +44,13 @@
 				</ul>
 			</nav>
 
-			<div class="social pull-right">
+			<!--<div class="social pull-right">
 				<ul class="list-unstyled">
 					<li class="animated wow fadeInRight" data-wow-delay=".2s"><a href="#"><img src="img/facebook.png" alt="" title=""></a></li>
 					<li class="animated wow fadeInRight" data-wow-delay=".1s"><a href="#"><img src="img/twitter.png" alt="" title=""></a></li>
 					<li class="animated wow fadeInRight" data-wow-delay="0s"><a href="#"><img src="img/google.png" alt="" title=""></a></li>
 				</ul>
-			</div>
+			</div>-->
 
 			<span class="burger_icon">menu</span>
 		</div>
@@ -122,12 +122,12 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 text-center animated wow fadeInLeft">
+				<div class="col-md-12 text-center animated wow fadeInLeft">
 					<div class="iphone">
 						<img src="img/iphone.png" alt="" titl="">
 					</div>
 				</div>
-				<div class="col-md-6 animated wow fadeInRight">
+				<div class="col-md-12 animated wow fadeInRight">
 					<div class="features_list">
 						<h1 class="text-uppercase">Capture unforgettable moments.</h1>
 						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
