--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 			<div class="logo pull-left animated wow fadeInLeft">
 				<img src="img/logo.png" alt="" title="">
 			</div>
-
+			<div class="logo-mobile">
+				<img src="img/logo-mobile.png" alt="" title="">
+			</div>
 			
 			<nav class="pull-right">
 				<ul class="list-unstyled">
