--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</div>
 				<div class="col-md-6 animated wow fadeInRight">
 					<div class="features_list">
-						<h1 class="text-uppercase">Capture unforgettable moments.</h1>
+						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
 						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
 						<ul class="list-unstyled">
 							<li class="camera_icon">
