--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 					<i class="android_icon"></i>
 					<span>Android App</span>
 				</a>-->
-			</div>			
+			</div>
+			<div class="blueprint">
+			</div>
 		</div>
 	</section>
 	<!--  End Hero Section  -->
