--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 		<div class="container">
 			<div class="caption">
 				<h1 class="text-uppercase  animated wow fadeInLeft">The 1st Greenport in Indonesia.</h1>
-				<ul class="text-lowercase  animated wow fadeInLeft">
+				<!--<ul class="text-lowercase  animated wow fadeInLeft">
 					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
 					<li>Closed to airport anda seaport.</li>
 					<li>Modern international and domestic greenport in Indonesia.</li>
 				</ul>
 
-				<!--<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="iphone_icon"></i>
 					<span>Iphone App</span>
 				</a>
