--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<!--  Header Section  -->
 	<header>
 		<div class="container">
-			<div class="logo pull-left animated wow fadeInLeft">
+			<div class="hidden-xs logo pull-left animated wow fadeInLeft">
 				<img src="img/logo.png" alt="" title="">
 			</div>
 			<div class="logo-mobile">
