--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section class="hero" id="hero">
 		<div class="container">
 			<div class="caption">
-				<h1 class="text-uppercase  animated wow fadeInLeft">The 1st Greenport in Indonesia.</h1>
+				<h1 class="text-uppercase  animated wow fadeInLeft"><span>The 1st Greenport in Indonesia</span></h1>
 				<!--<ul class="text-lowercase  animated wow fadeInLeft">
 					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
 					<li>Closed to airport anda seaport.</li>
