--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
 	<section class="hero" id="hero">
 		<div class="container">
 			<div class="caption">
-				<h1 class="text-uppercase  animated wow fadeInLeft"><span>The 1st Greenport in Indonesia</span></h1>
+				<h1 class="text-uppercase  animated wow fadeInLeft">
+					<span>TERMINAL</span>
+					<span>MULTIPURPOSE</span>
+					<span>TELUK LAMONG</span>
+					<span>The 1<sup>st</sup> Greenport in Indonesia</span>
+				</h1>
 				<!--<ul class="text-lowercase  animated wow fadeInLeft">
 					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
 					<li>Closed to airport anda seaport.</li>
@@ -85,7 +90,7 @@
 					<span>Android App</span>
 				</a>-->
 			</div>
-			<div class="blueprint">
+			<div class="blueprint hide">
 			</div>
 		</div>
 	</section>
