--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 		<div class="container">
 			<div class="caption">
 				<h1 class="text-uppercase  animated wow fadeInLeft">
-					<span>TERMINAL</span>
-					<span>MULTIPURPOSE</span>
-					<span>TELUK LAMONG</span>
-					<span>The 1<sup>st</sup> Greenport in Indonesia</span>
+					<span class="a1">TERMINAL</span>
+					<span class="a2">MULTIPURPOSE</span>
+					<span class="a3">TELUK LAMONG</span>
+					<span class="a4">The 1<sup>st</sup> Greenport in Indonesia</span>
 				</h1>
 				<!--<ul class="text-lowercase  animated wow fadeInLeft">
 					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
