--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 		<div class="container">
 			<div class="caption">
 				<h1 class="text-uppercase  animated wow fadeInLeft">
-					<span class="a1">TERMINAL</span>
-					<span class="a2">MULTIPURPOSE</span>
-					<span class="a3">TELUK LAMONG</span>
+					<span class="a1">TERMINAL</span><br/>
+					<span class="a2">MULTIPURPOSE</span><br/>
+					<span class="a3">TELUK LAMONG</span><br/>
 					<span class="a4">The 1<sup>st</sup> Greenport in Indonesia</span>
 				</h1>
 				<!--<ul class="text-lowercase  animated wow fadeInLeft">
