--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 					<span class="a1">TERMINAL</span><br/>
 					<span class="a2">MULTIPURPOSE</span><br/>
 					<span class="a3">TELUK LAMONG</span><br/>
-					<span class="a4">The 1<sup>st</sup> Greenport</span><br/>
-					<span class="a5">In Indonesia</span>
+					<span class="a4">The 1<sup>st</sup> Greenport In Indonesia</span>
 				</h1>
 				<!--<ul class="text-lowercase  animated wow fadeInLeft">
 					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
