--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 text-center animated wow fadeInLeft">
+				<div class="col-md-12 text-center animated wow fadeInLeft">
 					<div class="iphone">
-						<img src="img/iphone.png" alt="" titl="">
+						<img src="img/blueprint.png" alt="" title="">
 					</div>
 				</div>
-				<div class="col-md-6 animated wow fadeInRight">
+				<div class="col-md-12 text-center animated wow fadeInRight">
 					<div class="features_list">
 						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
 						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
-						<ul class="list-unstyled">
+						<!--<ul class="list-unstyled">
 							<li class="camera_icon">
 								<span>Euismod ligula ipsum vulputate tellus.</span>
 							</li>
@@ -156,13 +156,13 @@
 							<li class="loc_icon">
 								<span>Cras interdum vestibulum dolor.</span>
 							</li>
-						</ul>
+						</ul>-->
 
 						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="http://www.youtube.com/embed/Bm3NV3gGB2w?autoplay=1&showinfo=0">
 							<i class="play_icon"></i>
-							<span>About Video</span>
+							<span>Play Video</span>
 						</a>
-						<a href="#hero" class="app_link">Get the app</a>
+						<!--<a href="#hero" class="app_link">Get the app</a>-->
 					</div>					
 				</div>
 			</div>
@@ -295,7 +295,7 @@
 
 	<!--  Footer Section  -->
 	<footer>
-		<ul class="list-unstyled list-inline app_platform">
+		<!--<ul class="list-unstyled list-inline app_platform">
 			<li class="animated wow fadeInDown" data-wow-delay="0s">
 				<a href=""><img src="img/android_icon.png" alt="" title=""></a>
 			</li>
@@ -305,7 +305,7 @@
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
 				<a href=""><img src="img/windows_icon.png" alt="" title=""></a>
 			</li>
-		</ul>
+		</ul>-->
 		<p class="copyright animated wow fadeIn" data-wow-duration="2s">© 2015 <a href="http://pixelhint.com" target="_blank"><strong>Pixelhint.com</strong></a>. All Rights Reserved</p>
 	</footer>
 	<!--  End Footer Section  -->
