--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center animated wow fadeInLeft">
-					<div class="iphone">
-						<img src="img/blueprint.png" alt="" title="">
+					<div class="blueprint">
+						<img src="img/blueprint.png" alt="" title="" class="img-responsive">
 					</div>
 				</div>
 				<div class="col-md-12 text-center animated wow fadeInRight">
