--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section class="hero" id="hero">
 		<div class="container">
 			<div class="caption">
-				<h1 class="text-uppercase  animated wow fadeInLeft">
+				<h1 class="text-uppercase  animated wow fadeIn">
 					<span class="a1">TERMINAL</span><br/>
 					<span class="a2">MULTIPURPOSE</span><br/>
 					<span class="a3">TELUK LAMONG</span><br/>
@@ -131,12 +131,12 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 text-center animated wow fadeInLeft">
+				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="blueprint">
 						<img src="img/blueprint.png" alt="" title="" class="img-responsive">
 					</div>
 				</div>
-				<div class="col-md-12 text-center animated wow fadeInRight">
+				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
 						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
 						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
