--- a/index.html
+++ b/index.html
@@ -223,11 +223,27 @@
 	<!--  And App Features Section  -->
 
 
+	<section class="about" id="siteplan">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center animated wow fadeIn">
+					<div class="features_list">
+						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
+						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+
+					</div>					
+				</div>
+			</div>
+		</div>
+
+		<div class="about_video show_video">
+			<a href="" class="close_video"></a>
+		</div>
+	</section>
 
 
 
-
-	<!--  Testimonials Section  -->
+	<!--  Testimonials Section 
 	<section class="testimonials animated wow fadeIn" id="testimonials" data-wow-duration="2s">
 		<div class="container">
 			<div class="testimonials_list">
@@ -267,14 +283,14 @@
 			</div>
 		</div>
 	</section>
-	<!--  End Testimonials Section  -->
+	End Testimonials Section  -->
 
 
 
 
 
 
-	<!--  Email Subscription Section  -->
+	<!--  Email Subscription Section
 	<section class="sub_box">
 		<p class="cta_text animated wow fadeInDown">Join Our Liste and stay updated!</p>
 		<form action="http://pixelhint.us3.list-manage.com/subscribe/post?u=9cf3b8b1cfc597a436b9964d3&amp;id=2449ed590e" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
@@ -286,7 +302,7 @@
 		<div class="message" id="error_msg">Please Enter A Valid Email.</div>
 		<div class="message" id="success_msg">Thank You For Your Subscription.</div>
 	</section>
-	<!--  End Email Subscription Section  -->
+	End Email Subscription Section  -->
 
 
 
