--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 
 
-	<!--  App Features Section  -->
+	<!--  Features Section  -->
 	<section class="app_features" id="app_features">
 		<div class="container">
 
@@ -220,24 +220,31 @@
 
 		</div>
 	</section>
-	<!--  And App Features Section  -->
+	<!--  // Features Section  -->
 
 
 	<section class="about" id="siteplan">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center animated wow fadeIn">
+					<div class="img-siteplan">
+						<img src="img/siteplan.png" alt="" title="" class="img-responsive">
+					</div>
+				</div>
+				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
-						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
-						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
-
+						<h1 class="text-uppercase">SITE PLAN</h1>
+						<ul>
+							<li>1 Petak start from 1.5Ha</li>
+							<li><span></span> Premium Lot</li>
+							<li><span></span> Pelindo Area</li>
+							<li>1 Lot 2 petak</li>
+							<li>Office & Facilities</li>
+							<li></li>
+						</ul>
 					</div>					
 				</div>
 			</div>
-		</div>
-
-		<div class="about_video show_video">
-			<a href="" class="close_video"></a>
 		</div>
 	</section>
 
