--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="img-siteplan">
-						<img src="img/siteplan.png" alt="" title="" class="img-responsive">
+						<img src="img/siteplan.svg" alt="" title="" class="img-responsive">
 					</div>
 				</div>
 				<div class="col-md-12 text-center animated wow fadeIn">
