--- a/index.html
+++ b/index.html
@@ -227,22 +227,22 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center animated wow fadeIn">
+					<h1 class="text-uppercase">SITE PLAN</h1>
+				</div>
+				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="img-siteplan">
 						<img src="img/siteplan.svg" alt="" title="" class="img-responsive">
 					</div>
 				</div>
 				<div class="col-md-12 text-center animated wow fadeIn">
-					<div class="features_list">
-						<h1 class="text-uppercase">SITE PLAN</h1>
-						<ul>
-							<li>1 Petak start from 1.5Ha</li>
-							<li><span></span> Premium Lot</li>
-							<li><span></span> Pelindo Area</li>
-							<li>1 Lot 2 petak</li>
-							<li>Office & Facilities</li>
-							<li></li>
-						</ul>
-					</div>					
+					<ul class="siteplan-legend">
+						<li>1 Petak start from 1.5Ha</li>
+						<li><span></span> Premium Lot</li>
+						<li><span></span> Pelindo Area</li>
+						<li>1 Lot 2 petak</li>
+						<li>Office & Facilities</li>
+						<li></li>
+					</ul>					
 				</div>
 			</div>
 		</div>
