--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 						<img src="img/siteplan.svg" alt="" title="" class="img-responsive">
 					</div>
 				</div>
-				<div class="col-md-12 text-center animated wow fadeIn">
+				<div class="col-md-12 animated wow fadeIn">
 					<ul class="siteplan-legend">
 						<li>1 Petak start from 1.5Ha</li>
 						<li><span></span> Premium Lot</li>
