--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
 				<div class="col-md-12 animated wow fadeIn">
 					<ul class="siteplan-legend">
 						<li>1 Petak start from 1.5Ha</li>
-						<li><span></span> Premium Lot</li>
-						<li><span></span> Pelindo Area</li>
+						<li><span style="background:#eadb22"></span> Premium Lot</li>
+						<li><span style="background:#6fcaf3"></span> Pelindo Area</li>
 						<li>1 Lot 2 petak</li>
-						<li>Office & Facilities</li>
+						<li><span style="background:#0c78bd"></span> Office & Facilities</li>
 						<li></li>
 					</ul>					
 				</div>
