--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
 	</section>
 
 
+	<section id="map-line">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center animated wow fadeIn">
+					<h1 class="text-uppercase">SITE PLAN</h1>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!--  Testimonials Section 
 	<section class="testimonials animated wow fadeIn" id="testimonials" data-wow-duration="2s">
