--- a/index.html
+++ b/index.html
@@ -250,12 +250,9 @@
 
 
 	<section id="map-line">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center animated wow fadeIn">
-					<h1 class="text-uppercase">SITE PLAN</h1>
-				</div>
-			</div>
+		<h1 class="text-uppercase">SITE PLAN</h1>
+		<div class="ml1">
+		
 		</div>
 	</section>
 
