--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 
 	<section id="map-line">
-		<h1 class="text-uppercase">SITE PLAN</h1>
+		<h1 class="text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
 		<div class="ml1">
 		
 		</div>
