--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 
 	<section id="map-line">
 		<h1 class="text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
+		<p>Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
 		<div class="ml1">
 		
 		</div>
