--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
 						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
-						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+						<p>
+							With a total area of 145 hectares, we provide depo, warehousing and supporting services for international and local cargo transit as well as city and regional goods distribution logistics.
+							<br/><br/>
+							Such a new generation of logistic solutions, taking care of all your logistics needs at Terminal Teluk Lamong, one of the biggest and modern port in East Java.
+							<br/><br/>
+							The warehouses are designed based on a modular principle to meet the requirements of an individual tenant.
+						</p>
 						<!--<ul class="list-unstyled">
 							<li class="camera_icon">
 								<span>Euismod ligula ipsum vulputate tellus.</span>
@@ -174,9 +180,16 @@
 	</section>
 	<!--  End About Section  -->
 
-
-
-
+	
+	<!--  Start Map  -->
+	<section id="map-line">
+		<h1 class="container text-center text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
+		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
+		<div class="ml1">
+		
+		</div>
+	</section>
+	<!--  End of Map  -->
 
 
 	<!--  Features Section  -->
@@ -247,15 +260,7 @@
 			</div>
 		</div>
 	</section>
-
-
-	<section id="map-line">
-		<h1 class="container text-center text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
-		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
-		<div class="ml1">
-		
-		</div>
-	</section>
+	
 
 	<!--  Testimonials Section 
 	<section class="testimonials animated wow fadeIn" id="testimonials" data-wow-duration="2s">
