--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 				</div>
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
-						<h1 class="text-uppercase">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
-						<p>
+						<h1 class="text-uppercase fadeIn">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
+						<p class="fadeIn">
 							With a total area of 145 hectares, we provide depo, warehousing and supporting services for international and local cargo transit as well as city and regional goods distribution logistics. Such a new generation of logistic solutions, taking care of all your logistics needs at Terminal Teluk Lamong, one of the biggest and modern port in East Java. The warehouses are designed based on a modular principle to meet the requirements of an individual tenant.
 						</p>
 						<!--<ul class="list-unstyled">
