--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
 				</ul>
 			</nav>
 
-			<!--<div class="social pull-right">
-				<ul class="list-unstyled">
-					<li class="animated wow fadeInRight" data-wow-delay=".2s"><a href="#"><img src="img/facebook.png" alt="" title=""></a></li>
-					<li class="animated wow fadeInRight" data-wow-delay=".1s"><a href="#"><img src="img/twitter.png" alt="" title=""></a></li>
-					<li class="animated wow fadeInRight" data-wow-delay="0s"><a href="#"><img src="img/google.png" alt="" title=""></a></li>
-				</ul>
-			</div>-->
-
 			<span class="burger_icon">menu</span>
 		</div>
 	</header>
@@ -69,26 +61,11 @@
 		<div class="container">
 			<div class="caption">
 				<h1 class="text-uppercase  animated wow fadeIn">
-					<span class="a1">TERMINAL</span><br/>
-					<span class="a2">MULTIPURPOSE</span><br/>
-					<span class="a3">TELUK LAMONG</span><br/>
-					<span class="a4">The 1<sup>st</sup> Greenport In Indonesia</span>
+					<span class="a1">CARGO</span><br/>
+					<span class="a2">DISTRIBUTION CENTER</span><br/>
+					<span class="a3">TERMINAL TELUK LAMONG</span><br/>
+					<span class="a4">The 1<sup>st</sup> Green & Automated Port In Indonesia</span>
 				</h1>
-				<!--<ul class="text-lowercase  animated wow fadeInLeft">
-					<li>Located in Teluk Lamong, 30 minutes from Surabaya.</li>
-					<li>Closed to airport anda seaport.</li>
-					<li>Modern international and domestic greenport in Indonesia.</li>
-				</ul>
-
-				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
-					<i class="iphone_icon"></i>
-					<span>Iphone App</span>
-				</a>
-
-				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
-					<i class="android_icon"></i>
-					<span>Android App</span>
-				</a>-->
 			</div>
 			<div class="blueprint hide">
 			</div>
@@ -122,9 +99,15 @@
 	</section>
 	  End Featured On Section  -->
 
-
-
-
+	<!--  Start Map  -->
+	<section id="map-line">
+		<h1 class="container text-center text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
+		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
+		<div class="ml1">
+		
+		</div>
+	</section>
+	<!--  End of Map  -->
 
 
 	<!--  About Section  -->
@@ -175,17 +158,6 @@
 		</div>
 	</section>
 	<!--  End About Section  -->
-
-	
-	<!--  Start Map  -->
-	<section id="map-line">
-		<h1 class="container text-center text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
-		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
-		<div class="ml1">
-		
-		</div>
-	</section>
-	<!--  End of Map  -->
 
 
 	<!--  Features Section  -->
