--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 	<!--  Start Map  -->
 	<section id="map-line">
-		<h1 class="container text-center text-uppercase">PERFECT LOCATION FOR YOUR BUSINESS</h1>
+		<h1 class="container text-center text-uppercase">WHY TELUK LAMONG IS<br/>PERFECT LOCATION FOR YOUR BUSINESS ?</h1>
 		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
 		<div class="ml1">
 		
@@ -114,6 +114,7 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
+				<h1 class="text-uppercase fadeIn">What IS <span class="greenText">TELUKLAMONG</span> CARGO DISTRIBUTION CENTER?</h1>
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="blueprint">
 						<img src="img/blueprint.png" alt="" title="" class="img-responsive">
@@ -121,7 +122,6 @@
 				</div>
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
-						<h1 class="text-uppercase fadeIn">Why <span class="greenText">TELUKLAMONG</span> FACILITES?</h1>
 						<p class="fadeIn">
 							With a total area of 145 hectares, we provide depo, warehousing and supporting services for international and local cargo transit as well as city and regional goods distribution logistics. Such a new generation of logistic solutions, taking care of all your logistics needs at Terminal Teluk Lamong, one of the biggest and modern port in East Java. The warehouses are designed based on a modular principle to meet the requirements of an individual tenant.
 						</p>
