--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 	<!--  Start Map  -->
 	<section id="map-line">
-		<h1 class="container text-center text-uppercase">WHY TELUK LAMONG IS<br/>PERFECT LOCATION FOR YOUR BUSINESS ?</h1>
+		<h1 class="container text-center text-uppercase">WHY <span class="greenText">TELUK LAMONG</span> IS<br/>PERFECT LOCATION FOR YOUR BUSINESS?</h1>
 		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
 		<div class="ml1">
 		
@@ -114,7 +114,7 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
-				<h1 class="text-uppercase fadeIn">What IS <span class="greenText">TELUKLAMONG</span> CARGO DISTRIBUTION CENTER?</h1>
+				<h1 class="text-uppercase fadeIn">WHAT IS <span class="greenText">TELUK LAMONG</span> <br/> CARGO DISTRIBUTION CENTER?</h1>
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="blueprint">
 						<img src="img/blueprint.png" alt="" title="" class="img-responsive">
