--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
-				<h1 class="text-uppercase fadeIn">WHAT IS <span class="greenText">TELUK LAMONG</span> <br/> CARGO DISTRIBUTION CENTER?</h1>
+				<h1 class="text-uppercase fadeIn text-center">WHAT IS <span class="greenText">TELUK LAMONG</span> <br/> CARGO DISTRIBUTION CENTER?</h1>
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="blueprint">
 						<img src="img/blueprint.png" alt="" title="" class="img-responsive">
