--- a/index.html
+++ b/index.html
@@ -109,6 +109,54 @@
 	</section>
 	<!--  End of Map  -->
 
+	<section class="about" id="premium--location">
+		<div class="container">
+			<div class="row">
+				<h1 class="text-uppercase fadeIn text-center">WHAT IS <span class="greenText">TELUK LAMONG</span> <br/> CARGO DISTRIBUTION CENTER?</h1>
+				<div class="col-md-12 text-center animated wow fadeIn">
+					<div class="blueprint">
+						<img src="img/blueprint.png" alt="" title="" class="img-responsive">
+					</div>
+				</div>
+				<div class="col-md-12 text-center animated wow fadeIn">
+					<div class="features_list">
+						<p class="fadeIn">
+							With a total area of 145 hectares, we provide depo, warehousing and supporting services for international and local cargo transit as well as city and regional goods distribution logistics. Such a new generation of logistic solutions, taking care of all your logistics needs at Terminal Teluk Lamong, one of the biggest and modern port in East Java. The warehouses are designed based on a modular principle to meet the requirements of an individual tenant.
+						</p>
+						<!--<ul class="list-unstyled">
+							<li class="camera_icon">
+								<span>Euismod ligula ipsum vulputate tellus.</span>
+							</li>
+							<li class="video_icon">
+								<span>Morbi non efficitur nibh sit amet est eros.</span>
+							</li>
+							<li class="eye_icon">
+								<span>Fusce faucibus ante liberonec luctus egestas.</span>
+							</li>
+							<li class="pic_icon">
+								<span>Quisque pretium malesuada ornare.</span>
+							</li>
+							<li class="loc_icon">
+								<span>Cras interdum vestibulum dolor.</span>
+							</li>
+						</ul>-->
+
+						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="http://www.youtube.com/embed/Bm3NV3gGB2w?autoplay=1&showinfo=0">
+							<i class="play_icon"></i>
+							<span>Play Video</span>
+						</a>
+						<!--<a href="#hero" class="app_link">Get the app</a>-->
+					</div>					
+				</div>
+			</div>
+		</div>
+
+		<div class="about_video show_video">
+			<a href="" class="close_video"></a>
+		</div>
+	</section>
+	<!--  End About Section  -->
+	
 
 	<!--  About Section  -->
 	<section class="about" id="about">
