--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 	</section>
 	<!--  End of Map  -->
 
+	<!-- start prem location -->
 	<section class="about" id="premium--location">
 		<div class="container">
 			<div class="row">
@@ -122,18 +123,30 @@
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
 						<p class="fadeIn">
-							With a total area of 145 hectares, we provide depo, warehousing and supporting services for international and local cargo transit as well as city and regional goods distribution logistics. Such a new generation of logistic solutions, taking care of all your logistics needs at Terminal Teluk Lamong, one of the biggest and modern port in East Java. The warehouses are designed based on a modular principle to meet the requirements of an individual tenant.
+<strong>HIGHWAY :</strong><br/>
+Direct access with Surabaya – Gresik<br/>
+Highway with flyover.<br/><br/>
+
+<strong>MAIN ROAD :</strong><br/>
+Province Road : Tambakosowilangun St.<br/>
+connecting Surabaya City and Gresik.<br/><br/>
+
+<strong>RAILWAY :</strong><br/>
+Railway activating from Duduk Sampeyan<br/>
+railway station in West Surabaya to Veteran<br/>
+Station in Gresik<br/><br/>
+
+<strong>SEA BARGE :</strong><br/>
+Connected sea barge between Teluk<br/>
+Lamong Port & Tanjung Perak Port<br/>
+(Jetty to Jetty)
 						</p>
 					</div>					
 				</div>
 			</div>
 		</div>
-
-		<div class="about_video show_video">
-			<a href="" class="close_video"></a>
-		</div>
 	</section>
-	<!--  End About Section  -->
+	<!--  End prem location Section  -->
 	
 
 	<!--  About Section  -->
