--- a/index.html
+++ b/index.html
@@ -123,23 +123,24 @@
 				<div class="col-md-12 text-center animated wow fadeIn">
 					<div class="features_list">
 						<p class="fadeIn">
-<strong>HIGHWAY :</strong><br/>
-Direct access with Surabaya – Gresik<br/>
-Highway with flyover.<br/><br/>
+							<strong>HIGHWAY :</strong><br/>
+							Direct access with Surabaya – Gresik<br/>
+							Highway with flyover.<br/><br/>
 
-<strong>MAIN ROAD :</strong><br/>
-Province Road : Tambakosowilangun St.<br/>
-connecting Surabaya City and Gresik.<br/><br/>
+							<strong>MAIN ROAD :</strong><br/>
+							Province Road : Tambakosowilangun St.<br/>
+							connecting Surabaya City and Gresik.<br/><br/>
+						</p>
+						<p class="fadeIn">
+							<strong>RAILWAY :</strong><br/>
+							Railway activating from Duduk Sampeyan<br/>
+							railway station in West Surabaya to Veteran<br/>
+							Station in Gresik<br/><br/>
 
-<strong>RAILWAY :</strong><br/>
-Railway activating from Duduk Sampeyan<br/>
-railway station in West Surabaya to Veteran<br/>
-Station in Gresik<br/><br/>
-
-<strong>SEA BARGE :</strong><br/>
-Connected sea barge between Teluk<br/>
-Lamong Port & Tanjung Perak Port<br/>
-(Jetty to Jetty)
+							<strong>SEA BARGE :</strong><br/>
+							Connected sea barge between Teluk<br/>
+							Lamong Port & Tanjung Perak Port<br/>
+							(Jetty to Jetty)
 						</p>
 					</div>					
 				</div>
