--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 				<a href=""><img src="img/windows_icon.png" alt="" title=""></a>
 			</li>
 		</ul>-->
-		<p class="copyright animated wow fadeIn" data-wow-duration="2s">© 2015 <a href="http://pixelhint.com" target="_blank"><strong>Pixelhint.com</strong></a>. All Rights Reserved</p>
+		<p class="copyright animated wow fadeIn" data-wow-duration="2s">© 2018 <a href="http://pixelhint.com" target="_blank"><strong>teluklamongcargo.co.id</strong></a>. All Rights Reserved</p>
 	</footer>
 	<!--  End Footer Section  -->
 
