--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 			
 			<nav class="pull-right">
 				<ul class="list-unstyled">
-					<li class="animated wow fadeInLeft" data-wow-delay="0s"><a href="#about">About</a></li>
-					<li class="animated wow fadeInLeft" data-wow-delay=".1s"><a href="#app_features">Features</a></li>
-					<li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#testimonials">Testimonials</a></li>
+					<li class="animated wow fadeInLeft" data-wow-delay="0s"><a href="https://drive.google.com/file/d/1JlY1QFKPG1dJo9oReaXRCSjuzPyHOh2p/view">PDF Version</a></li>
+					<!--<li class="animated wow fadeInLeft" data-wow-delay=".1s"><a href="#app_features">Features</a></li>
+					<li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#testimonials">Testimonials</a></li>-->
 				</ul>
 			</nav>
 
@@ -269,6 +269,11 @@
 						<li></li>
 					</ul>					
 				</div>
+				<div class="col-md-12 text-center" style="margin: 5rem 0 0 0;">
+					<a href="https://drive.google.com/file/d/1K4r_Y_JYuBhK1IhXKR1L9RnlUImGnjVm/view" class="app_store_btn text-uppercase text-center">
+						<span>Download Booklet</span>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -353,7 +358,7 @@
 				<a href=""><img src="img/windows_icon.png" alt="" title=""></a>
 			</li>
 		</ul>-->
-		<p class="copyright animated wow fadeIn" data-wow-duration="2s">© 2018 <a href="http://pixelhint.com" target="_blank"><strong>teluklamongcargo.co.id</strong></a>. All Rights Reserved</p>
+		<p class="copyright animated wow fadeIn" data-wow-duration="2s">© 2018 <a href="/" target="_blank"><strong>teluklamongcargo.co.id</strong></a>. All Rights Reserved</p>
 	</footer>
 	<!--  End Footer Section  -->
 
