--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			
 			<nav class="pull-right">
 				<ul class="list-unstyled">
-					<li class="animated wow fadeInLeft" data-wow-delay="0s"><a href="https://drive.google.com/file/d/1JlY1QFKPG1dJo9oReaXRCSjuzPyHOh2p/view">PDF Version</a></li>
+					<li class="animated wow fadeIn" data-wow-delay="0s"><a href="https://drive.google.com/file/d/1JlY1QFKPG1dJo9oReaXRCSjuzPyHOh2p/view">Download PDF Version</a></li>
 					<!--<li class="animated wow fadeInLeft" data-wow-delay=".1s"><a href="#app_features">Features</a></li>
 					<li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#testimonials">Testimonials</a></li>-->
 				</ul>
