--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 				</div>
 				<div class="col-md-12 text-center" style="margin: 5rem 0 0 0;">
 					<a href="https://drive.google.com/file/d/1K4r_Y_JYuBhK1IhXKR1L9RnlUImGnjVm/view" class="app_store_btn text-uppercase text-center">
-						<span>Download Booklet</span>
+						<span>Download Detail Siteplan</span>
 					</a>
 				</div>
 			</div>
