--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 			
 			<nav class="pull-right">
 				<ul class="list-unstyled">
-					<li class="animated wow fadeIn" data-wow-delay="0s"><a href="https://drive.google.com/file/d/1JlY1QFKPG1dJo9oReaXRCSjuzPyHOh2p/view">Download PDF Version</a></li>
-					<!--<li class="animated wow fadeInLeft" data-wow-delay=".1s"><a href="#app_features">Features</a></li>
-					<li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#testimonials">Testimonials</a></li>-->
+					<li class="animated wow fadeIn" data-wow-delay="0s"><a href="#map-line">Where</a></li>
+					<li class="animated wow fadeIn" data-wow-delay=".1s"><a href="#about">About Us</a></li>
+					<li class="animated wow fadeIn" data-wow-delay=".2s"><a href="#testimonials">Siteplan</a></li>
+					<li class="animated wow fadeIn" data-wow-delay=".3s"><a href="https://drive.google.com/file/d/1JlY1QFKPG1dJo9oReaXRCSjuzPyHOh2p/view">PDF Version</a></li>
 				</ul>
 			</nav>
 
