--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ layout: default
 
 
 
-	<!--  Email Subscription Section
+	<!--  Contact Us Section -->
 	<section class="sub_box">
 		<p class="cta_text animated wow fadeInDown">Join Our Liste and stay updated!</p>
 		<form action="http://pixelhint.us3.list-manage.com/subscribe/post?u=9cf3b8b1cfc597a436b9964d3&amp;id=2449ed590e" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
@@ -258,7 +258,7 @@ layout: default
 		<div class="message" id="error_msg">Please Enter A Valid Email.</div>
 		<div class="message" id="success_msg">Thank You For Your Subscription.</div>
 	</section>
-	End Email Subscription Section  -->
+	<!-- Contact Us Section  -->
 
 
 
