--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 layout: default
 ---
 
-	<!--  Header Section  -->
-	{% include header.html %}
-	<!--  End Header Section  -->
-
 	<!--  Jumbotron Section  -->
 	{% include jumbotron.html %}
 	<!--  End Jumbotron Section  -->
@@ -247,9 +243,9 @@ layout: default
 
 
 	<!--  Contact Us Section -->
-	<section class="sub_box">
-		<p class="cta_text animated wow fadeInDown">Join Our Liste and stay updated!</p>
-		<form action="http://pixelhint.us3.list-manage.com/subscribe/post?u=9cf3b8b1cfc597a436b9964d3&amp;id=2449ed590e" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
+	<section class="sub_box container">
+		<h2 class="cta_text animated wow fadeIn">CONTACT US</h2>
+		<form action="" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
 			<input type="email" id="mc-email" placeholder="Enter your email"/>
 			<button type="submit" id="mc_submit">
 				<i class="icon"></i>
@@ -259,14 +255,5 @@ layout: default
 		<div class="message" id="success_msg">Thank You For Your Subscription.</div>
 	</section>
 	<!-- Contact Us Section  -->
-
-
-
-
-
-
-	<!--  Footer Section  -->
-	{% include footer.html %}
-	<!--  End Footer Section  -->
 
 
