--- a/index.html
+++ b/index.html
@@ -243,16 +243,18 @@ layout: default
 
 
 	<!--  Contact Us Section -->
-	<section class="sub_box container">
-		<h2 class="cta_text animated wow fadeIn">CONTACT US</h2>
-		<form action="" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
-			<input type="email" id="mc-email" placeholder="Enter your email"/>
-			<button type="submit" id="mc_submit">
-				<i class="icon"></i>
-			</button>
-		</form>
-		<div class="message" id="error_msg">Please Enter A Valid Email.</div>
-		<div class="message" id="success_msg">Thank You For Your Subscription.</div>
+	<section class="about">
+		<div class="sub_box container">
+			<h2 class="cta_text animated wow fadeIn">CONTACT US</h2>
+			<form action="" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
+				<input type="email" id="mc-email" placeholder="Enter your email"/>
+				<button type="submit" id="mc_submit">
+					<i class="icon"></i>
+				</button>
+			</form>
+			<div class="message" id="error_msg">Please Enter A Valid Email.</div>
+			<div class="message" id="success_msg">Thank You For Your Subscription.</div>
+		</div>
 	</section>
 	<!-- Contact Us Section  -->
 
