--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ layout: default
 
 
 	<!--  Contact Us Section -->
-	<section class="about">
+	<section class="subb">
 		<div class="sub_box container">
 			<h2 class="cta_text animated wow fadeIn">CONTACT US</h2>
 			<form action="" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
