--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@ layout: default
 			</form>
 			<div class="message" id="error_msg">Please Enter A Valid Email.</div>
 			<div class="message" id="success_msg">Thank You For Your Subscription.</div>
+			<p>Any information collected through our online enquiry form, feedback, phone or web chat services are managed in accordance with the privacy statement. The information provided by our service is not legal advice.</p>
 		</div>
 	</section>
 	<!-- Contact Us Section  -->
