--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 			<a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Baca Selengkapnya</a>
 			</article>
 			<div class="date">
-				Written on {{ page.date | date: "%B %e, %Y" }}
+				Written on {{ post.date | date: "%B %e, %Y" }}
 			</div>
 			{% endfor %}
 		</div>
