--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 			{{ post.excerpt }}
 			</div>-->
 
-			<a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Baca Selengkapnya</a>
+			<a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
 			<div class="date">
 				Written on {{ post.date | date: "%B %e, %Y" }}
 			</div>
