--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,8 @@ layout: default
 		article.post{
 		    float: left;
 		    width: 33%;
+		    padding: 3rem 1.5rem;
+		    border: none;
 		}
 		
 		article.post img{
@@ -26,7 +28,8 @@ layout: default
 		
 		article.post em{
 			display:block;
-			text-align:center
+			text-align:center;
+			font-style:normal;
 		}
 		
 	</style>
